# FFmpeg-API

./: Dockerfile  Dockerfile.amd  Dockerfile.nvidia  Dockerfile.nvidia2  Dockerfile.test  LICENSE  README.md  SETUP.md  config.json  docker-compose.yml  pyproject.toml  requirements.txt
backend/: app.py  config.py  exceptions.py  get_codec.py  get_media_type.py  get_resolution.py  main.py  merge_multimedia.py  run_container.py  transcode_media.py
backend/docker_methods/: build_ffmpeg_command.py  generate_parameters.py  run_container.py
backend/environment/: get_config.py  get_hardware_encoder.py  get_storage_directory.py
backend/ffmpeg_methods/: build_command.py  get_bitrate.py  get_codec.py  get_encoders.py  get_resolution.py  merge_multimedia.py  transcode_media.py
backend/routers/: router.py  tasks.py
backend/test/: test_transcode_media.py  tests.md
